--- a/components/input/number.html
+++ b/components/input/number.html
@@ -1340,19 +1340,19 @@
 <p><a href="https://isle.heinz.cmu.edu/components/number-input/" target="_blank">Open interactive preview</a></p>
 <h4 id="options">Options:</h4>
 <ul>
-<li><strong>bind</strong> | <code>string</code>: A string indicating the variable for the number to be assigned. Default: <code>&apos;&apos;</code>.</li>
-<li><strong>defaultValue</strong> | <code>number</code>: A value indicating the default value of the input at start. Default: <code>0</code>.</li>
-<li><strong>disabled</strong> | <code>boolean</code>: A boolean indicating whether the input is active or not. Default: <code>false</code>.</li>
-<li><strong>inline</strong> | <code>boolean</code>: Indicates whether the input is displayed inline. Default: <code>false</code>.</li>
-<li><strong>legend</strong> | <code>string</code>: A string indicating the text displayed next to the number input. Default: <code>&apos;&apos;</code>.</li>
-<li><strong>max</strong> | <code>number</code>: A number indicating the maximum value that may be inserted. Default: <code>null</code>.</li>
-<li><strong>min</strong> | <code>number</code>: A number indicating the smallest possible value that may be inserted. Default: <code>null</code>.</li>
-<li><strong>numbersOnly</strong> | <code>boolean</code>: A boolean value indicating whether only numbers are accepted. Default: <code>true</code>.</li>
-<li><strong>onBlur</strong> | <code>function</code>: A function to be called when using a blur method. Default: <code>onBlur() {}</code>.</li>
-<li><strong>onChange</strong> | <code>function</code>: A function to be called when a number is inputted. Default: <code>onChange() {}</code>.</li>
-<li><strong>step</strong> | <code>(number|string)</code>: A number indicating the incremental changes when using the increment arrows. Default: <code>1</code>.</li>
-<li><strong>value</strong> | <code>number</code>: A property indicating a value that can overwrite others. Default: <code>none</code>.</li>
-<li><strong>width</strong> | <code>number</code>: A number indicating the width of the input bar in pixels. Default: <code>80</code>.</li>
+<li><strong>bind</strong> | <code>string</code>: : name of global variable for the number to be assigned to. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>defaultValue</strong> | <code>number</code>: value indicating the default value of the input at startup. Default: <code>0</code>.</li>
+<li><strong>disabled</strong> | <code>boolean</code>: boolean indicating whether the input is active or not. Default: <code>false</code>.</li>
+<li><strong>inline</strong> | <code>boolean</code>: indicates whether the input is displayed inline. Default: <code>false</code>.</li>
+<li><strong>legend</strong> | <code>string</code>: string indicating the text displayed next to the number input. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>max</strong> | <code>number</code>: number indicating the maximum value that may be inserted. Default: <code>null</code>.</li>
+<li><strong>min</strong> | <code>number</code>: number indicating the smallest possible value that may be inserted. Default: <code>null</code>.</li>
+<li><strong>numbersOnly</strong> | <code>boolean</code>: controls whether only numbers are accepted. Default: <code>true</code>.</li>
+<li><strong>onBlur</strong> | <code>function</code>: callback function to be invoked when using a blur method. Default: <code>onBlur() {}</code>.</li>
+<li><strong>onChange</strong> | <code>function</code>: callback function to be invoked when number input is changed. Default: <code>onChange() {}</code>.</li>
+<li><strong>step</strong> | <code>(number|string)</code>: number indicating the incremental changes when using the increment arrows. Default: <code>1</code>.</li>
+<li><strong>value</strong> | <code>number</code>: number value (for controlled component). Default: <code>none</code>.</li>
+<li><strong>width</strong> | <code>number</code>: number indicating the width of the input bar in pixels. Default: <code>80</code>.</li>
 </ul>
 
                                 
@@ -1397,7 +1397,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Number Input","level":"1.4.15.3","depth":3,"next":{"title":"Proportions Input","level":"1.4.15.4","depth":3,"path":"components/input/proportions.md","ref":"components/input/proportions.md","articles":[]},"previous":{"title":"Checkbox Input","level":"1.4.15.2","depth":3,"path":"components/input/checkbox.md","ref":"components/input/checkbox.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/input/number.md","mtime":"2018-09-11T05:36:00.751Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-11T05:38:09.812Z"},"basePath":"../..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Number Input","level":"1.4.15.3","depth":3,"next":{"title":"Proportions Input","level":"1.4.15.4","depth":3,"path":"components/input/proportions.md","ref":"components/input/proportions.md","articles":[]},"previous":{"title":"Checkbox Input","level":"1.4.15.2","depth":3,"path":"components/input/checkbox.md","ref":"components/input/checkbox.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/input/number.md","mtime":"2018-09-17T02:48:39.426Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-17T02:49:59.895Z"},"basePath":"../..","book":{"language":""}});
         });
     </script>
 </div>
