--- a/components/input/proportions.html
+++ b/components/input/proportions.html
@@ -1347,15 +1347,15 @@
 <p><a href="https://isle.heinz.cmu.edu/components/proportions-input/" target="_blank">Open interactive preview</a></p>
 <h4 id="options">Options:</h4>
 <ul>
-<li><strong>disabled</strong> | <code>boolean</code>: undefined. Default: <code>false</code>.</li>
-<li><strong>height</strong> | <code>number</code>: undefined. Default: <code>200</code>.</li>
-<li><strong>innerRadius</strong> | <code>number</code>: undefined. Default: <code>75</code>.</li>
-<li><strong>legends</strong> | <code>array</code>: undefined. Default: <code>none</code>.</li>
-<li><strong>margin</strong> | <code>string</code>: undefined. Default: <code>none</code>.</li>
-<li><strong>nElements</strong> | <code>number</code>: undefined. Default: <code>6</code>.</li>
-<li><strong>onChange</strong> | <code>function</code>: undefined. Default: <code>onChange(){}</code>.</li>
-<li><strong>precision</strong> | <code>number</code>: undefined. Default: <code>1</code>.</li>
-<li><strong>step</strong> | <code>number</code>: undefined. Default: <code>0.1</code>.</li>
+<li><strong>disabled</strong> | <code>boolean</code>: controls whether the input field is deactivated. Default: <code>false</code>.</li>
+<li><strong>height</strong> | <code>number</code>: proportions input height (in px). Default: <code>200</code>.</li>
+<li><strong>innerRadius</strong> | <code>number</code>: inner radius of proportions pie chart (in px). Default: <code>75</code>.</li>
+<li><strong>legends</strong> | <code>array</code>: group labels. Default: <code>none</code>.</li>
+<li><strong>margin</strong> | <code>string</code>: proportion input margin (in px). Default: <code>none</code>.</li>
+<li><strong>nElements</strong> | <code>number</code>: number of elements. Default: <code>6</code>.</li>
+<li><strong>onChange</strong> | <code>function</code>: callback function to be invoked when a choice is made. Default: <code>onChange(){}</code>.</li>
+<li><strong>precision</strong> | <code>number</code>: displayed precision of proportion values. Default: <code>1</code>.</li>
+<li><strong>step</strong> | <code>number</code>: the step of the arrows seen when hovering the cursor above the input box. Default: <code>0.1</code>.</li>
 </ul>
 
                                 
@@ -1400,7 +1400,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Proportions Input","level":"1.4.15.4","depth":3,"next":{"title":"Select Input","level":"1.4.15.5","depth":3,"path":"components/input/select.md","ref":"components/input/select.md","articles":[]},"previous":{"title":"Number Input","level":"1.4.15.3","depth":3,"path":"components/input/number.md","ref":"components/input/number.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/input/proportions.md","mtime":"2018-09-11T05:36:00.751Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-11T05:38:09.812Z"},"basePath":"../..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Proportions Input","level":"1.4.15.4","depth":3,"next":{"title":"Select Input","level":"1.4.15.5","depth":3,"path":"components/input/select.md","ref":"components/input/select.md","articles":[]},"previous":{"title":"Number Input","level":"1.4.15.3","depth":3,"path":"components/input/number.md","ref":"components/input/number.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/input/proportions.md","mtime":"2018-09-17T02:48:39.426Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-17T02:49:59.895Z"},"basePath":"../..","book":{"language":""}});
         });
     </script>
 </div>
