--- a/components/proportions-survey.html
+++ b/components/proportions-survey.html
@@ -1347,9 +1347,9 @@
 <p><a href="https://isle.heinz.cmu.edu/components/proportions-survey/" target="_blank">Open interactive preview</a></p>
 <h4 id="options">Options:</h4>
 <ul>
-<li><strong>allowMultipleAnswers</strong> | <code>boolean</code>: undefined. Default: <code>false</code>.</li>
-<li><strong>anonymous</strong> | <code>boolean</code>: undefined. Default: <code>false</code>.</li>
-<li><strong>colors</strong> | <code>array</code>: undefined. Default: <code>[
+<li><strong>allowMultipleAnswers</strong> | <code>boolean</code>: contols whether one wishes to allow students to answer the survey multiple times. Default: <code>false</code>.</li>
+<li><strong>anonymous</strong> | <code>boolean</code>: contols whether student answers are anonymized. Default: <code>false</code>.</li>
+<li><strong>colors</strong> | <code>array</code>: array of colors for the pie chart components. If not defined, a custom color scale will be used. Default: <code>[
 &apos;tomato&apos;,
 &apos;orange&apos;,
 &apos;gold&apos;,
@@ -1361,19 +1361,19 @@
 &apos;darkkhaki&apos;,
 &apos;darkseagreen&apos;
 ]</code>.</li>
-<li><strong>disabled</strong> | <code>boolean</code>: undefined. Default: <code>false</code>.</li>
-<li><strong>group</strong> | <code>string</code>: undefined. Default: <code>&apos;group results&apos;</code>.</li>
-<li><strong>groupHeight</strong> | <code>number</code>: undefined. Default: <code>100</code>.</li>
-<li><strong>groupInnerRadius</strong> | <code>number</code>: undefined. Default: <code>40</code>.</li>
-<li><strong>legends</strong> | <code>(string|array)</code>: undefined. Default: <code>&apos;Legend&apos;</code>.</li>
-<li><strong>margin</strong> | <code>string</code>: undefined. Default: <code>&apos;40px&apos;</code>.</li>
-<li><strong>nElements</strong> | <code>number</code>: undefined. Default: <code>6</code>.</li>
-<li><strong>onSubmit</strong> | <code>function</code>: undefined. Default: <code>onSubmit() {}</code>.</li>
-<li><strong>personalHeight</strong> | <code>number</code>: undefined. Default: <code>200</code>.</li>
-<li><strong>personalInnerRadius</strong> | <code>number</code>: undefined. Default: <code>60</code>.</li>
-<li><strong>precision</strong> | <code>number</code>: undefined. Default: <code>1</code>.</li>
-<li><strong>question</strong> | <code>string</code>: undefined. Default: <code>&apos;&apos;</code>.</li>
-<li><strong>step</strong> | <code>number</code>: undefined. Default: <code>0.1</code>.</li>
+<li><strong>disabled</strong> | <code>boolean</code>: controls whether the survey is deactivated. Default: <code>false</code>.</li>
+<li><strong>group</strong> | <code>string</code>: group display heading. Default: <code>&apos;group results&apos;</code>.</li>
+<li><strong>groupHeight</strong> | <code>number</code>: proportions input height for group display (in px). Default: <code>100</code>.</li>
+<li><strong>groupInnerRadius</strong> | <code>number</code>: inner radius of proportions pie chart for group display (in px). Default: <code>40</code>.</li>
+<li><strong>legends</strong> | <code>array</code>: legend labels that describe the options to be weighed. Default: <code>none</code>.</li>
+<li><strong>margin</strong> | <code>string</code>: proportion input margin (in px). Default: <code>&apos;40px&apos;</code>.</li>
+<li><strong>nElements</strong> | <code>number</code>: number of elements that shall be weighed. Default: <code>6</code>.</li>
+<li><strong>onSubmit</strong> | <code>function</code>: callback function invoked once students submits an answer. Default: <code>onSubmit() {}</code>.</li>
+<li><strong>personalHeight</strong> | <code>number</code>: proportions input height for individual student (in px). Default: <code>200</code>.</li>
+<li><strong>personalInnerRadius</strong> | <code>number</code>: inner radius of proportions pie chart for individual student (in px). Default: <code>60</code>.</li>
+<li><strong>precision</strong> | <code>number</code>: displayed precision of proportion values. Default: <code>2</code>.</li>
+<li><strong>question</strong> | <code>string</code>: the question to be displayed. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>step</strong> | <code>number</code>: the step of the arrows seen when hovering the cursor above the input box. Default: <code>0.1</code>.</li>
 </ul>
 
                                 
@@ -1418,7 +1418,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Proportions Survey","level":"1.4.17.3","depth":3,"next":{"title":"Survey Generator","level":"1.4.17.4","depth":3,"path":"components/survey-generator.md","ref":"components/survey-generator.md","articles":[]},"previous":{"title":"Number Survey","level":"1.4.17.2","depth":3,"path":"components/number-survey.md","ref":"components/number-survey.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/proportions-survey.md","mtime":"2018-09-11T05:36:00.851Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-11T05:38:09.812Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Proportions Survey","level":"1.4.17.3","depth":3,"next":{"title":"Survey Generator","level":"1.4.17.4","depth":3,"path":"components/survey-generator.md","ref":"components/survey-generator.md","articles":[]},"previous":{"title":"Number Survey","level":"1.4.17.2","depth":3,"path":"components/number-survey.md","ref":"components/number-survey.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/proportions-survey.md","mtime":"2018-09-17T02:48:39.466Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-09-17T02:49:59.895Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
